# tele-rust

./: .gitignore  AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: app.rs  input.rs  main.rs  telegram.rs  tui.rs
