[package]
name = "tele-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
dotenvy = "0.15"
grammers-client = "0.8.1"
grammers-mtsender = "0.8.1"
grammers-session = "0.8.0"
ratatui = "0.29"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
